add code to meet first requirement, trying to fix local issue

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,14 @@
     <title>Doctor Lookup</title>
   </head>
   <body>
+    <form id="searchByMalady" action="index.html" method="post">
+      <label>Search Doctors by Malady:</label>
+      <input type="text" id="malady">
+      <button type="submit" name="button">Search!</button>
+    </form>
+    <ul id="doctorList">
 
+    </ul>
+    <p id="#error"></p>
   </body>
 </html>
