add doctor search by name

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
       <input type="text" id="malady">
       <button type="submit" name="button">Search!</button>
     </form>
+    <form id="searchByName" action="index.html" method="post">
+      <label>Search Doctors by Name:</label>
+      <input type="text" id="name">
+      <button type="submit" name="button">Search!</button>
+    </form>
     <ul id="doctorList">
 
     </ul>
